# chrome_manager

./: .gitignore  README.md  pylintrc  pyproject.toml  requirements.txt  setup.py
chrome_manager/: __init__.py  chrome_driver.py  chrome_ext_downloader.py  chrome_installer.py  service.py
chrome_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
